<resources>
    <string name="app_name">Athletic Adrenaline</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_score"><u>Reset score</u></string>
    <string name="privacy"><u>Privacy</u></string>
    <string name="play">Play</string>
    <string name="welcome">WELCOME!</string>
    <string name="vibration">Vibration</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="lucky_wheel">Lucky Wheel</string>
    <string name="slots">Slots</string>
    <string name="bonus_game">Bonus Game</string>
    <string name="total">Total</string>
    <string name="win">Win</string>
    <string name="sign_up">Sign Up!</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="anonymous">Anonymous</string>
</resources>