<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_port_dark2"
    tools:context="presentation.fragments.AuthFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_sign_up"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <ImageView
        android:id="@+id/box1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/box_not_checked"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h25"
        app:layout_constraintEnd_toEndOf="@id/guideline_v35"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h25"
        app:layout_constraintWidth_percent="0.3"
        android:focusable="true" />

    <ImageView
        android:id="@+id/box2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:clickable="true"
        android:src="@drawable/box_not_checked"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h61"
        app:layout_constraintEnd_toEndOf="@id/guideline_v35"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h25"
        app:layout_constraintWidth_percent="0.3"
        android:focusable="true" />

    <ImageView
        android:id="@+id/box3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:clickable="true"
        android:src="@drawable/box_checked"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h61"
        app:layout_constraintEnd_toEndOf="@id/guideline_v35"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h61"
        app:layout_constraintWidth_percent="0.3"
        android:focusable="true" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:text="@string/phone"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="@id/guideline_v35"
        app:layout_constraintTop_toTopOf="@id/guideline_h25"
        app:layout_constraintWidth_percent="0.6" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:text="@string/email"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h61"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="@id/guideline_v35"
        app:layout_constraintTop_toTopOf="@id/guideline_h25"
        app:layout_constraintWidth_percent="0.6" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:text="@string/anonymous"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h61"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="@id/guideline_v35"
        app:layout_constraintTop_toTopOf="@id/guideline_h61"
        app:layout_constraintWidth_percent="0.6" />

    <ImageView
        android:id="@+id/button_play"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/text_field_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h61"
        app:layout_constraintWidth_percent="0.65" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_play"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:text="@string/play"
        android:clickable="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h61"
        app:layout_constraintWidth_percent="0.35"
        android:focusable="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

</androidx.constraintlayout.widget.ConstraintLayout>