<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_port_dark2"
    tools:context="presentation.fragments.MenuFragment">

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/button_back"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="@id/guideline_v35"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h15"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.15" />

    <ImageView
        android:id="@+id/button_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/button_settings"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h15"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="@id/guideline_v65"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3" />

    <ImageView
        android:id="@+id/button_game_wheel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/text_field_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h38"
        app:layout_constraintHeight_percent="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h15"
        app:layout_constraintWidth_percent="0.7" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_game_wheel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:gravity="center_vertical"
        android:text="@string/lucky_wheel"
        android:textColor="@color/white"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.55"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h15" />

    <ImageView
        android:id="@+id/button_game_slot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/text_field_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h61"
        app:layout_constraintHeight_percent="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h38"
        app:layout_constraintWidth_percent="0.7" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_game_slot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:textAlignment="center"
        android:text="@string/slots"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h38" />

    <ImageView
        android:id="@+id/button_game_bonus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/text_field_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h84"
        app:layout_constraintHeight_percent="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h61"
        app:layout_constraintWidth_percent="0.7" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_game_bonus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:lines="1"
        android:autoSizeTextType="uniform"
        android:gravity="center_vertical"
        android:text="@string/bonus_game"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h61" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/link_privacy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:clickable="true"
        android:textAlignment="center"
        android:text="@string/privacy"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h84"
        android:focusable="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h84"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65"
        />

</androidx.constraintlayout.widget.ConstraintLayout>